fixed minor issue causing white space to be rendered when image grid overflows div container

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
+}
+
+body {
   background-color: #bfd3c4;
-  height: 100vh;
 }
 
